# ant-farm

./: .gitignore  README.md  pyproject.toml
.claude/agents/: blind-critic.md  clerk.md  curator.md  hole-finder.md  scout.md  sentinel.md  stitcher.md  surveyor.md
.claude/skills/survey/: SKILL.md
.claude/skills/survey/references/: compression.md  critique-probes.md  expansion.md  sublation-and-decision.md
.github/workflows/: ci.yml
docs/specs/: 2026-07-03-ant-farm-design.md
docs/superpowers/plans/: 2026-07-03-corpus-core.md  2026-07-04-survey-pipeline.md
scripts/: check_workflow.mjs  smoke.py  smoke_pipeline.py
src/antfarm/: __main__.py  analysis.py  brief.py  cli.py  cluster.py  counterfactual.py  emission.py  events.py  farm.py  gates.py  graph.py  harvest.py  materialize.py  reduce.py  render.py  schema.py  stores.py  transcript.py  tripwires.py
tests/: helpers.py  test_agents.py  test_analysis.py  test_brief.py  test_cli.py  test_cluster.py  test_counterfactual.py  test_emission.py  test_events.py  test_farm.py  test_gates.py  test_graph.py  test_harvest.py  test_materialize.py  test_reduce.py  test_render.py  test_schema.py  test_stores.py  test_transcript.py  test_tripwires.py
workflows/: survey.js
