[project]
name = "antfarm"
version = "0.1.0"
description = "A surveying instrument for contested questions - corpus core"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "chromadb>=1.5,<2",
    "networkx>=3.3",
    "numpy>=1.26",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antfarm"]

[tool.pytest.ini_options]
addopts = "-m 'not eval'"
markers = ["eval: evaluation tests using real embedding models (slow, downloads)"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "test_schema", "test_events", "test_reduce", "test_cluster", "test_graph",
    "test_stores", "test_transcript", "test_counterfactual", "test_render",
    "test_emission", "test_harvest", "test_gates", "test_tripwires", "test_analysis",
    "test_farm", "test_brief", "test_cli", "test_materialize", "test_agents",
    "helpers", "conftest",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["chromadb.*", "networkx.*"]
ignore_missing_imports = true
